codellama-project/kubernetes/codellama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codellama-service
  namespace: codellama
spec:
  selector:
    app: codellama
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
