codellama-project/kubernetes/codellama-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codellama-ingress
  namespace: codellama
  annotations:
    ingress.class: "haproxy"
    haproxy.org/timeout-connect: "10s"
    haproxy.org/timeout-client: "3m"
    haproxy.org/timeout-server: "3m"
spec:
  rules:
  - host: codellama-backend.home.virtualelephant.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: codellama-service
            port:
              number: 80
